# blaze

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: deploy-wasm.yml
architecture/: ARCH.md
examples/: disassemble-rom.rs  dump_font.py
roms/vt420/: symbols.txt
src/: comm.rs  duart.rs  lk201.rs  main.rs  memory.rs  screen.rs  ssu.rs  video.rs
src/host/: SSU.md  comm.rs  demo_comm.rs  logging.rs  mod.rs  screen.rs  ssu.rs
src/host/lk201/: crossterm.rs  mod.rs  winit.rs
src/host/screen/: headless.rs  mod.rs  ratatui.rs  wgpu.rs
src/host/wgpu/: mod.rs
src/machine/: mod.rs
src/machine/generic/: duart.rs  lk201.rs  mod.rs  nvr.rs  vsync.rs
src/machine/vt420/: breakpoints.rs  memory.rs  mod.rs  video.rs
