[package]
name = "blaze-vt"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
description = "A VT420 terminal emulator"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
repository = "https://github.com/mmastrac/blaze-vt"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
type-mapper = "0.1.2"
bytemuck = { version = "1.24", features = ["derive"] }
paste = "1"
#i8051 = { path = "../i8051/crates/i8051" }
#i8051-debug-tui = { path = "../i8051/crates/i8051-debug-tui" }
i8051 = { version = "0.10.0" }
i8051-debug-tui = { version = "0.10.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ratatui = "0.29.0"
hex-literal = "1.1"
pty-process = "0.5"
bit-set = "0.8"
libc = "0.2.177"

pixels = { git = "https://github.com/parasyte/pixels.git", features = [], optional = true }
game-loop = { version = "=1.1.0", features = ["winit"], optional = true }
winit_input_helper = { version = "=0.15", optional = true }

[dev-dependencies]
tempfile = "3.23"

[features]
default = ["graphics"]
pc-trace = []
graphics = ["dep:pixels", "dep:game-loop", "dep:winit_input_helper"]

[[example]]
name = "disassemble-rom"
